--- a/devops.html
+++ b/devops.html
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -155,7 +155,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/buf156kyqzw8jamfoyoakb17xh'>Contract DevOps Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/buf156kyqzw8jamfoyoakb17xh'>Contract DevOps Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -359,7 +359,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/newsignature/jobs/azure-devops-consultant-c1466kQaGr6AsBaKld2Sj6'>Azure DevOps Consultant #0826 job at New Signature in Tampa, FL, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/newsignature/jobs/azure-devops-consultant-c1466kQaGr6AsBaKld2Sj6'>Azure DevOps Consultant #0826 job at New Signature in Tampa, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Tampa, FLTampa, FL</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -383,7 +383,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of DevOps Engineer at Everledger.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://azimo.workable.com/jobs/1074164'>Senior DevOps Engineer - Apply online - Azimo - Jobs</a></h5> 
+<h5><a href='https://azimo.workable.com/jobs/1074164'>Senior DevOps Engineer - Apply online - Azimo - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of Senior DevOps Engineer at Azimo.</p>
 <hr/>
@@ -391,11 +391,11 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692161526-devops-engineer'>Innoview DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692161526-devops-engineer'>Innoview DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/cern/743999692087623-it-development-and-operations-tools-technician-devops-tte-programme-'>CERN IT Development and Operations tools Technician - DevOps (TTE Programme) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/cern/743999692087623-it-development-and-operations-tools-technician-devops-tte-programme-'>CERN IT Development and Operations tools Technician - DevOps (TTE Programme) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -407,7 +407,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://activeprospect.applytojob.com/apply/TcIaoFramR/Senior-DevOps-Engineer-Remote-OK'>Senior DevOps Engineer (Remote OK) - ActiveProspect, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activeprospect.applytojob.com/apply/TcIaoFramR/Senior-DevOps-Engineer-Remote-OK'>Senior DevOps Engineer (Remote OK) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -448,12 +448,12 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
 available?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
+<h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... As a DevOps Engineer your focus will be to collaborate with developer and 
 operations teams to maintain and evolve our platforms. More specifically, as a?...</p>
 <hr/>
-<h5><a href='https://cdl-2.workable.com/j/60C5EB3E5A'>CDL - Jobs: DevOps Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdl-2.workable.com/j/60C5EB3E5A'>CDL - Jobs: DevOps Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
