--- a/software.html
+++ b/software.html
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999692397673-staff-software-engineer-backend-java-ref17011j-visa-digital-developer-platform-vddp-'>Visa Staff Software Engineer, Backend Java (REF17011J) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999692397673-staff-software-engineer-backend-java-ref17011j-visa-digital-developer-platform-vddp-'>Visa Staff Software Engineer, Backend Java (REF17011J) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -165,7 +165,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -193,7 +193,7 @@
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oxVJ8fw3&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n8oXUKwC'>Premier Research Careers - Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oxVJ8fw3&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n8oXUKwC'>Premier Research Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light">Kansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wellsky/jobs/1768306'>Job Application for Software Engineer - Biotherapies  at WellSky </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellsky/jobs/1768306'>Job Application for Software Engineer - Biotherapies  at WellSky </a></h5> 
 <p><span class="badge badge-light">Kansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -229,7 +229,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/couchbase/99dfa378-9581-4b87-a271-660aa5bbedd6'>Couchbase - Software Engineer in Test - Mobile</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/99dfa378-9581-4b87-a271-660aa5bbedd6'>Couchbase - Software Engineer in Test - Mobile</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -249,11 +249,11 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
 <p><span class="badge badge-light">Hong Kong Island, Hong Kong</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://lynk-2.workable.com/j/245A7476FA'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/245A7476FA'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -332,7 +332,7 @@ empowers and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://brz.softgarden.io/job/2610384/Senior-Software-Engineer-agiler-Software-Architekt-m-w-d-?jobDbPVId=12134789&amp;l=de'>Senior Software Engineer / agiler Software Architekt (m/w/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brz.softgarden.io/job/2610384/Senior-Software-Engineer-agiler-Software-Architekt-m-w-d-?jobDbPVId=12134789&amp;l=de'>Senior Software Engineer / agiler Software Architekt (m/w/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -353,7 +353,7 @@ line.</p>
 <p>6 days ago ... The Senior Software Engineer position performs complex research, design, and 
 software development assignments within a software functional area or product?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-11665'>Senior Software Engineer - Akamai Careers</a></h5> 
+<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-11665'>Senior Software Engineer - Akamai Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... We are seeking a passionate, product-focused Senior Software Engineer who 
 thrives on delivering exceptional quality and functionality to customers....</p>
@@ -432,7 +432,7 @@ m/f) in Winterthur (published: 19.07.2019). Apply now or check the other?...</p>
 <p>Jul 18, 2019 ... Senior Software Engineer - Compilers. Job ID #: 16393; Job Category: Software 
 Engineering; Employment Type: Experienced Professionals; Division:?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42860&localeCode=en-us'>Staff Software Engineer ? HPC debug and analysis tools ... - ARM</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42860&localeCode=en-us'>Staff Software Engineer ? HPC debug and analysis tools ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... We are looking for an experienced staff software engineer who is passionate 
 about producing quality software and helping develop a young team of engineers
@@ -443,7 +443,7 @@ about producing quality software and helping develop a young team of engineers
 <p>Jul 18, 2019 ... Becoming a DevOps Engineer with Capita Education Software Solutions: The 
 SIMS8 development environment is making significant steps forwards in its?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/communitybrands/job/ob7M8fwW'>Community Brands Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
